# MBZIRC_challenge2

./: Husky_user_instruction.txt  LICENSE  README.md  mbzirc.rosinstall  smach_actionlib_server_template.cpp  smach_actionlib_server_template.py
kuri_mbzirc_challenge_2/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2/arduino/: Readme.txt
kuri_mbzirc_challenge_2/arduino/gripper_arbotix/: gripper_arbotix.ino
kuri_mbzirc_challenge_2/launch/: challenge_2.launch  challenge_2_real_husky.launch  challenge_2_real_kinect.launch  husky.launch  husky_kinect.launch  husky_kinect_normal.launch  husky_velodyne.launch  test_wrench_detection.launch  velodyne.launch
kuri_mbzirc_challenge_2/rviz/: kinect.rviz  real_husky.rviz  velodyne.rviz
kuri_mbzirc_challenge_2/scripts/: huskynavigation_action_server.py  publish_odom_gps_tf.py
kuri_mbzirc_challenge_2/src/: process_velodyne_rosbag.cpp
kuri_mbzirc_challenge_2_exploration/: CMakeLists.txt  package.xml  read_me.txt
kuri_mbzirc_challenge_2_exploration/config/: exploration.yaml
kuri_mbzirc_challenge_2_exploration/include/kuri_mbzirc_challenge_2_exploration/: box_location.h  gps_conversion.h  gps_occupancy.h  pointcloud_gps_filter.h  velodyne_box_detector.h
kuri_mbzirc_challenge_2_exploration/include/kuri_mbzirc_challenge_2_exploration/old/: detection.h  panel_searching.h
kuri_mbzirc_challenge_2_exploration/launch/: husky_nav_part.launch  husky_nav_part_standby.launch  test_gps_filter_velodyne.launch  test_gps_occupancy.launch  velodyne_part.launch  wp.launch  wp_square.launch
kuri_mbzirc_challenge_2_exploration/maps/: bm.yaml  empty_map.pgm
kuri_mbzirc_challenge_2_exploration/params/: pre-defined-path2.txt  pre-defined-standby.txt  pre-defined-straight.txt  pre-defined_building.txt
kuri_mbzirc_challenge_2_exploration/scripts/: autonomous_mod.py  autonomous_square.py  autonomous_standby.py  autonomous_straight.py  test_velodyne_box_detection.py
kuri_mbzirc_challenge_2_exploration/src/: action_server_box_location.cpp  box_location.cpp  gps_conversion.cpp  gps_occupancy.cpp  pointcloud_gps_filter.cpp  test_gps_filter_velodyne.cpp  test_gps_occupancy.cpp  velodyne_box_detector.cpp
kuri_mbzirc_challenge_2_exploration/src/old/: detection.cpp  main.cpp  panel_searching.cpp  tf_listener_class.cpp
kuri_mbzirc_challenge_2_msgs/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_msgs/action/: ArmMotion.action  BoxPosition.action  Huskynav.action  PanelPosition.action  WrenchDetection.action
kuri_mbzirc_challenge_2_msgs/msg/: ObjectPose.msg
kuri_mbzirc_challenge_2_panel_detection/: CMakeLists.txt  README.md  package.xml
kuri_mbzirc_challenge_2_panel_detection/launch/: ar_pose_single_gazebo.launch  ar_pose_single_kinect_husky.launch  ar_pose_single_soft.launch  usb-cam-calibration.launch  usb_cam_test.launch
kuri_mbzirc_challenge_2_panel_detection/rviz/: kinect.rviz
kuri_mbzirc_challenge_2_panel_detection/scripts/: explore-scan.py  explore2-kinect.py  panel_waypoint.py  test_waypoint.py
kuri_mbzirc_challenge_2_panel_detection/src/: circumnavigation_waypoints.cpp  test_velodyne_alignment.cpp
kuri_mbzirc_challenge_2_system_coordinator/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_system_coordinator/scripts/: state_machine.py
kuri_mbzirc_challenge_2_tools/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_tools/gps/gpxviewer/: filedrag.js  gpxviewer-drag.html  gpxviewer.html  pocotrail.xml
kuri_mbzirc_challenge_2_tools/include/kuri_mbzirc_challenge_2_tools/: pose_conversion.h
kuri_mbzirc_challenge_2_tools/launch/: record_rosbag.launch  test_exploration.launch  test_positioning.launch
kuri_mbzirc_challenge_2_tools/scripts/: convert_rosbag_to_gpxviewer_points.py  odometry_plot.py  plot_gps_sentence.py  plot_odometry_gps.py  rosbag_play_synchronized.py  rosbag_play_synchronized_v2.py  update_husky.sh
kuri_mbzirc_challenge_2_wrench_detection/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_wrench_detection/scripts/: panel_detection.py  panel_wrench_detection_gazebo.py  wrench_detection.py
kuri_mbzirc_challenge_2_wrench_detection/src/: kuri_wrench_detection.cpp  kuri_wrench_detection_cloudImgPub.cpp  plane_orientation.cpp
