<?xml version="1.0"?>
<package>
  <name>kuri_mbzirc_challenge_2_exploration</name>
  <version>0.1.0</version>
  <description>Exploration to determine the position of the box holding the panel</description>

  <maintainer email="abdullah.dayem@kustar.ac.ae">Abdullah Abduldayem</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/kuri-kustar</url>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>


  <build_depend>kuri_mbzirc_challenge_2_msgs</build_depend>
  <run_depend>kuri_mbzirc_challenge_2_msgs</run_depend>


  <build_depend>husky_navigation</build_depend>
  <run_depend>husky_navigation</run_depend>

  <build_depend>move_base</build_depend>
  <run_depend>move_base</run_depend>

  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>velodyne_driver</build_depend>
  <run_depend>velodyne_driver</run_depend>

  <build_depend>velodyne_pointcloud</build_depend>
  <run_depend>velodyne_pointcloud</run_depend>

  <build_depend>velodyne_msgs</build_depend>
  <run_depend>velodyne_msgs</run_depend>

  <export>
  </export>
</package>
