<?xml version="1.0"?>
<package>
  <name>kuri_mbzirc_challenge_2_msgs</name>
  <version>0.1.0</version>
  <description>MBZIRC Challenge 2 Messages</description>

  <maintainer email="abdullah.dayem@kustar.ac.ae">Abdullah Abduldayem</maintainer>
  
  <license>BSD</license>

  <url type="website">https://github.com/kuri-kustar</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>kuri_mbzirc_sim</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>kuri_mbzirc_sim</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
