<?xml version="1.0"?>
<package>
  <name>kuri_mbzirc_challenge_2_panel_detection</name>
  <version>0.1.0</version>
  <description>MBZIRC Challenge 2 Panel Detection</description>

  <maintainer email="abdullah.dayem@kustar.ac.ae">Abdullah Abduldayem</maintainer>
  
  <license>BSD</license>

  <url type="website">https://github.com/kuri-kustar</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>



  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

  <build_depend>kuri_mbzirc_challenge_2_msgs</build_depend>
  <run_depend>kuri_mbzirc_challenge_2_msgs</run_depend>

  <build_depend>kuri_mbzirc_challenge_2_tools</build_depend>
  <run_depend>kuri_mbzirc_challenge_2_tools</run_depend>

  <build_depend>kuri_mbzirc_sim</build_depend>
  <run_depend>kuri_mbzirc_sim</run_depend>

  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  
  <run_depend>husky_gazebo</run_depend>
  <run_depend>husky_ur5_moveit_config</run_depend>
  <run_depend>moveit_commander</run_depend>

  <export>
  </export>
</package>
