<?xml version="1.0"?>
<package>
  <name>kuri_mbzirc_challenge_2_wrench_detection</name>
  <version>0.1.0</version>
  <description>MBZIRC Challenge 2 Wrench Detection</description>

  <maintainer email="tarek.taha@gmail.com">TBD</maintainer>
  
  <license>BSD</license>

  <url type="website">https://github.com/kuri-kustar</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

  <build_depend>kuri_mbzirc_sim</build_depend>
  <run_depend>kuri_mbzirc_sim</run_depend>

  <build_depend>kuri_mbzirc_challenge_2_msgs</build_depend>
  <run_depend>kuri_mbzirc_challenge_2_msgs</run_depend>



  <export>
  </export>
</package>
